*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -10,6 +10,7 @@
 |ANT|AHO|Netherlands Antilles = Flag of the Netherlands Antilles.svg
 |ARG|Argentina              = Flag of Argentina.svg
 |ARM|Armenia                = Flag of Armenia.svg
+|ASM|ASA|Amerika Samoa|American Samoa = Flag of American Samoa.svg
 |ATG|Antigua at Barbuda|Antigua and Barbuda = Flag of Antigua and Barbuda.svg
 |AUS|Australia              = Flag of Australia.svg
 |AUT|Austria                = Flag of Austria.svg
