--- a/Deen_Castronovo.mw
+++ b/Deen_Castronovo.mw
@@ -1,6 +1,6 @@
 {{Infobox musical artist <!-- See Wikipedia:WikiProject_Musicians -->
 | Name                = Deen Castronovo
-| Img                 = deencastronovo.jpg
+| Img                 = Deen Castronovo.jpg
 | Img_capt            = 
 | Img_size            = 220px
 | Landscape           = 
