Changing by free file

--- a/Lea_Salonga.mw
+++ b/Lea_Salonga.mw
@@ -1,6 +1,6 @@
 {{Infobox Band
 | band_name         = Lea Salonga
-| image             = [[Image:LeaSalonga.jpg|center|200px]]
+| image             = [[Image:Lea Salonga San Francisco Sept 16 2011.png|center|200px]]
 | caption           = promotional photo of Lea
 | years_active      = 1981&ndash;present
 | origin            = [[Angeles Lakanbalen]], [[Pampanga]] ampong [[Menila]]
