--- a/Champagne-Ardenne.mw
+++ b/Champagne-Ardenne.mw
@@ -1,7 +1,7 @@
 {{Infobox French region |
 native_name              = Région Champagne-Ardenne |
 common_name              = Champagne-Ardene |
-image_flag               = Champardenn.gif|
+image_flag               = Champagne Ardenne flag.svg|
 image_logo               = ChALogo.gif|
 image_logo_size          = 140px|
 capital                  = [[Châlons-en-Champagne]] |
