--- a/Template:Champagne-geo-stub.mw
+++ b/Template:Champagne-geo-stub.mw
@@ -1,5 +1,3 @@
+<div class="boilerplate metadata" id="stub"><table cellpadding="0" cellspacing="0" style="background-color: transparent;"><tr ><td>[[Image:Champagne Ardenne flag.svg|40px| ]]</td><td >''&nbsp;Ining articulu dikil king geografia tungkul king [[Champagne-Ardenne]] metung yang [[Wikipedia:Perfect stub article|stub]].  Maka[[Wikipedia:Find or fix a stub|saup]] ka king Wikipedia kapamilata'ning [{{SERVER}}{{localurl:{{NAMESPACE}}:{{PAGENAME}}|action=edit}} pamandagdag  na niti ]''.  </td ></tr ></table ></div >
 
-
-<div class="boilerplate metadata" id="stub"><table cellpadding="0" cellspacing="0" style="background-color: transparent;"><tr ><td>[[Image:Champardenn.gif|40px| ]]</td><td >''&nbsp;Ining articulu dikil king geografia tungkul king [[Champagne-Ardenne]] metung yang [[Wikipedia:Perfect stub article|stub]].  Maka[[Wikipedia:Find or fix a stub|saup]] ka king Wikipedia kapamilata'ning [{{SERVER}}{{localurl:{{NAMESPACE}}:{{PAGENAME}}|action=edit}} pamandagdag  na niti ]''.  </td ></tr ></table ></div >
-
-[[Category:Champagne-Ardenne geography stubs]] <noinclude></noinclude></noinclude>
+[[Category:Champagne-Ardenne geography stubs]]
