Changing by free file

--- a/Kometa.mw
+++ b/Kometa.mw
@@ -1,4 +1,4 @@
-[[File:W-preview.jpg|right|thumb|250px|[[Ing Kometang West]]]]
+[[File:C-west-1976-ps.jpg|right|thumb|250px|[[Ing Kometang West]]]]
 [[File:CometDiagram.png|thumb|205px|Pamangulis ning [[w:orbit|orbit]] o dudurutan ning kometa<br />([[:Image:CometDiagram.gif|i-click]] me ba yang dagul)]]
 Ing '''kometa''' o '''panbulu''' metung yang bolang gawa keraklan king [[yelu]] a maglakbe king [[w:outer space|outer space]]. Kawangis ne ning [[asteroid]]. King [[solar system]] ning [[Yatu]], mas malaut la reng orbit a dudurutan da reng kometa kesa ketang king [[Pluto]], metung a [[w:dwarf planet|malating planeta]]ng sadyang marayung dili king [[w:Sun|Aldo]]. Marayu la king aldo deng keraklan kareti, oneng akakit ta la reng aliwa neng [[wikt:night|bengi]] nung milalapit lang ustu king Aldo. Mangakaba la "iki" deti uling lalasawan ning Aldo itang yelu. Neng kayi, awsan dong "dirty snowballs" o "shooting stars" deti. 
 
