--- a/Template:Portal:Society%2FFeatured_picture.mw
+++ b/Template:Portal:Society%2FFeatured_picture.mw
@@ -1,4 +1,4 @@
-[[Image:IMG 0996 Lhasa Barkhor.jpg]]
+[[Image:IMG 0996 Lhasa Barkhor.jpg|300px]]
 
 Tibet: Tatalan yang parugang a pángadi (prayer wheel) ing metung a matwang babaing Tibetan
 ketang lalabasan da reng peregrina (pilgrim) king Barkhor. Ing Barkhor, a mapilang dalan a 
