*Empty MediaWiki Message*

--- a/Mata.mw
+++ b/Mata.mw
@@ -1,4 +1,4 @@
-[[File:180px-Eye iris.jpg|thumb|300px|Ini ing mata ning [[tau]].]]
+[[File:Eye iris.jpg|thumb|300px|Ini ing mata ning [[tau]].]]
 Ing '''mata''' ing dake ning kekang [[katawan]] a gagamitan bang 
 [[:en:sight|manakit]]. [[:en:two|Adwa]] la mata deng tau at keraklan kareng 
 [[animal]]. 
