*Empty MediaWiki Message*

--- a/California.mw
+++ b/California.mw
@@ -234,7 +234,7 @@ Ing [[Babo California]] megumpisa yang mesakup at tiknangan de reng [[Emperiu ni
 
 
 
-[[File:1stBearFlag.jpg|250px|thumb|Ing Banderang Bear ning Republica ning California]]
+[[File:1stBearFlag.svg|250px|thumb|Ing Banderang Bear ning Republica ning California]]
 
 [[File:PB050006.JPG|thumb|left|250px|Ing [[Hollywood Sign]] iya ing peka symbulu ning California karas keng entertainment a industria.]]
 [[File:SJPan.jpg|thumb|right|250px| Ing [[Silicon Valley]] iya ing kalibudtan ning industria  ning computer, atiu mu mauli ning San Francisco.]]
