--- a/Des_Moines,_Iowa.mw
+++ b/Des_Moines,_Iowa.mw
@@ -6,7 +6,7 @@
 |image_skyline          = Des Moines skyline.jpg
 |image_flag             = Flag of Des Moines, Iowa.svg
 |image_seal             = Dmlogo.gif
-|image_map              = DesMoines Polk.png
+|image_map              = IAMap-doton-DesMoines.PNG
 |map_caption            = Karinan king [[Polk County, Iowa|Polk County]] at king State ning [[Iowa]]
 |subdivision_type = [[Countries of the world|Bangsa]]
 |subdivision_type1 =  [[Political divisions of the United States|State]]
