--- a/Menila.mw
+++ b/Menila.mw
@@ -93,7 +93,7 @@ larger version)]]
 * Palengke or Pamilihan sa ilalim ng tulay (literally means "a marketplace under the bridge), a center for indigenous Filipino products
 
 === Deng Pisamban ===
-[[File:D072dbac.jpg|thumb|150px|[[Menila Cathedral]] at night]]
+[[File:PH-Manila-Cathedral.jpg|thumb|150px|[[Menila Cathedral]] at night]]
 * Minor Basilica of the Immaculate Conception ([[Katedral ning Menila]])
 * Minor Basilica of the Black Nazarene (Quiapo Church)
 * [[San Agustin Church]]
