Iurung ya ing miyalilan 277307 nang [[Special:Contributions/Metrónomo|Metrónomo]] ([[User talk:Metrónomo|Talk]]) It is not the same description...

--- a/Menila.mw
+++ b/Menila.mw
@@ -77,7 +77,7 @@ larger version)]]
 * Chinatown (Binondo district)
 
 === Maragul a Pipanyalwan ===
-[[File:San Mateo Rizal 2.JPG|thumb|150px|The Avenida Rizal Pedestrian Shopping Strip, a fast becoming popular place for shopping]]
+[[File:Rizal2.jpg|thumb|150px|The Avenida Rizal Pedestrian Shopping Strip, a fast becoming popular place for shopping]]
 * SM Lakanbalen Menila
 * SM Centerpoint (SM Lakanbalen Sta. Mesa)
 * SM Department Store Quiapo
