--- a/San_Bernardino,_California.mw
+++ b/San_Bernardino,_California.mw
@@ -1,5 +1,5 @@
 {{Infobox City|official_name = San Bernardino, California
-|image_skyline = San Bernardino_California.jpg|thumb|250px|Ing San Bernardino skyline mayayakit ibat keng [[Grand Terrace]], California
+|image_skyline = SanBernardinoCA Skyline.jpg|thumb|250px|Ing San Bernardino skyline mayayakit ibat keng [[Grand Terrace]], California
 |nickname= Pasbul Lakanbalen, Ing Lakanbalen a Magluid, Ing Mabasang Lakanbalen
 |image_map = San_Bernardino_County_California_Incorporated_and_Unincorporated_areas_San_Bernardino_Highlighted.svg
 |map_caption = Location in the state of California
