Changing by free file

--- a/Riverside,_California.mw
+++ b/Riverside,_California.mw
@@ -1,5 +1,5 @@
 {{Infobox City|official_name = Riverside, California
-|image_skyline = Riv_skyline.jpg
+|image_skyline = Riverside mountain.jpg
 |nickname=The Lakanbalen da reng pun dutung|image_flag =riverflag.PNG
 |image_seal = City-of-riverside.jpg
 |image_map = Riverside_County_California_Incorporated_and_Unincorporated_areas_Riverside_Highlighted.svg
