--- a/Chico,_California.mw
+++ b/Chico,_California.mw
@@ -4,7 +4,7 @@
 |native_name = Rancho del Arroyo Chico
 |nickname = Lakanbalen da reng Rosas, City of Trees
 |motto =
-|image_skyline = 100_0351.JPG
+|image_skyline = Chico State's Kendall Hall.JPG
 |imagesize = 250px
 |image_caption = Kendall Hall at [[California State University, Chico]]
 |image_seal = sealcityofchico.gif
