--- a/Bakersfield,_California.mw
+++ b/Bakersfield,_California.mw
@@ -7,7 +7,7 @@
 |nickname               = California's Country Music Capital
 |settlement_type        = <!--For Town or Village (Leave blank for the default City) -->
 |motto                  = 
-|image_skyline          = 06-16-03c.jpg 
+|image_skyline          = DowntownBakersfield.jpg
 |imagesize              = 
 |image_caption          = Downtown Bakersfield with City Hall and Police Headquarters at left and Hall of Records at right
 |image_flag             = 
