--- a/Eslobakya.mw
+++ b/Eslobakya.mw
@@ -55,7 +55,7 @@
 Ing '''Slovakia''' (makabang aske: '''Slovak Republica'''; [[Slovak language|Slovak]]: ''Slovensko'', makabang aske ''Slovenská republika'') metung yang [[kandadung bangsa]] king [[Kalibudtang Europa]] a atin populasyun a maigit limang yuta. Ing Slovak Republica atin yang sepu king [[Czech Republic]] at [[Austria]] king albugan, [[Poland]] king pangulu, [[Ukraine]] king aslagan at [[Hungary]] king mauli. Ing pekamaragul a lakanbalen iyapin ing kayang tungku, ing [[Bratislava]]. Ing Slovakia metung yang state a kayanib keng  [[Pisanmetung a Europa]].
 
 
-[[File:250px-Slovakia_Oravsky_Podzamok.jpg]]
+[[File:Slovakia Oravsky Podzamok.jpg]]
 
 == Suglung Palwal ==
 * [http://web.archive.org/web/20050528231000/www.government.gov.sk/english/ The Slovak Republic Government Office]
