*Empty MediaWiki Message*

--- a/Fort_Worth,_Texas.mw
+++ b/Fort_Worth,_Texas.mw
@@ -48,7 +48,7 @@
 == Geografia at Klima ==
 [[File:FTWORTHTX3223.JPG|thumb|right|225px|Downtown Fort Worth manibatan [[Interstate 20|I-20]]]]
 
-[[File:225px-FW_Night.JPG|thumb|left|225px|Ing Downtown Fort Worth ustung bengi]]
+[[File:FW_Night.JPG|thumb|left|225px|Ing Downtown Fort Worth ustung bengi]]
 
 == References ==
 <div class="references-small"><references/></div>
