--- a/Baltimore,_Maryland.mw
+++ b/Baltimore,_Maryland.mw
@@ -1,4 +1,3 @@
-{{redirect6|Baltimore|the surrounding county|Baltimore County, Maryland}}
 {{Infobox City
 |official_name          = Baltimore, Maryland
 |nickname               = Monument City''", "''Charm City''", "''Mob Town''",<ref>Connery, William. [http://www.baltimoremd.com/charm/moblink.html "Maryland’s Mob Town Supplied Links Through Rail and Fort"]. May 2002. ''URL retrieved on [[January 27]], [[2007]].''</ref><ref>Smith, Van. [http://www.citypaper.com/arts/story.asp?id=9176 "Mob Rules"]. [[Baltimore City Paper]]. [[October 6]], [[2004]]. ''URL retrieved on [[January 27]], [[2007]].''</ref> "B-more
@@ -60,8 +59,8 @@
 == Amlat ==
 [[File:Washington Monument, 1849, from Federal Hill 1a.jpg|thumb|200px|right|Baltimore harbor inyang 1849 kambe ning bantug a [[Washington Monument (Baltimore)|Washington monument]] ]]
 [[File:Balt Battle Monument 1a.jpg|thumb|200px|right|Battle Monument kambe ning Washington Monument king gulut]]
-[[File:Balt. Fire 1904 - West from Pratt and Gay Streets 3a.jpg|thumb|200px|right|[[Great Baltimore a Silab]] ning 1904, makalawe king labugan manibat king Pratt at [[Gay Street (Baltimore)|Gay Streets]].]]
-[[File:Balt. Fire 1904 - West from Pratt and Gay Streets 1906, 2 years later a.jpg|thumb|200px|right|Ya mu rin ing view inyang 1906, 2 banua kaibat ning silab]]
+[[File:Baltimore Fire 1904 - West from Pratt and Gay Streets 3a.jpg|thumb|200px|right|[[Great Baltimore a Silab]] ning 1904, makalawe king labugan manibat king Pratt at [[Gay Street (Baltimore)|Gay Streets]].]]
+[[File:Baltimore Fire 1904 - West from Pratt and Gay Streets 1906, 2 years later a.jpg|thumb|200px|right|Ya mu rin ing view inyang 1906, 2 banua kaibat ning silab]]
 [[File:Bmore_from_the_Harbor.JPG|thumb|right|200px|]]
 
 == Lawen ya rin ==
