*Empty MediaWiki Message*

--- a/Baltimore,_Maryland.mw
+++ b/Baltimore,_Maryland.mw
@@ -55,7 +55,7 @@
 }}
 
 
-[[File:241px-IMG_0387.JPG|thumb|c|241px|A view of Baltimore from across the Patapsco River]]
+[[File:Downtown Baltimore Skyline 2007.jpg|thumb|c|241px|A view of Baltimore from across the Patapsco River]]
 == Amlat ==
 [[File:Washington Monument, 1849, from Federal Hill 1a.jpg|thumb|200px|right|Baltimore harbor inyang 1849 kambe ning bantug a [[Washington Monument (Baltimore)|Washington monument]] ]]
 [[File:Balt Battle Monument 1a.jpg|thumb|200px|right|Battle Monument kambe ning Washington Monument king gulut]]
