*Empty MediaWiki Message*

--- a/Baltimore,_Maryland.mw
+++ b/Baltimore,_Maryland.mw
@@ -4,7 +4,7 @@
 |motto                  = "The Greatest City in America",<ref>O'Mara, Richard. [http://www.csmonitor.com/2006/0105/p20s01-lihc.html "Backstory: Baltimore - 'Home of 1,000 Slogans'"]. [[The Christian Science Monitor]]. [[January 5]], [[2006]]. ''URL retrieved on [[January 27]], [[2007]].''</ref><br />
 "Get in on it."<ref>[http://www.areyouinonit.com/ Get in on it.] Baltimore Area  Convention and Visitors Association (BACVA). ''URL retrieved on [[January 27]], [[2007]].''</ref><br />
 (formerly "''The City That Reads''")''
-|image_skyline          = 250px-DOWNTOWN_BMORE_1.jpeg
+|image_skyline          = DOWNTOWN BMORE 1.jpg
 |imagesize              = 250px
 |image_caption          = Ing akakit king Downtown Baltimore manibatan king aslagan, keng Fayette St.
 |image_flag             = 100px-Baltimore.gif
