--- a/Fort_Worth,_Texas.mw
+++ b/Fort_Worth,_Texas.mw
@@ -2,7 +2,7 @@
 | nickname = Cowtown
 | motto = "Where the West Begins"
 | image_skyline = FortWorthTexasSkylineW.jpg
-| image_flag = 100px-FortWorthlogo.jpg
+| image_flag = Flag of Fort Worth, Texas (through 2004).svg
 | image_seal = Fort Worth seal.jpg
 | image_map = TXMap-doton-Fort_Worth.png
 | map_caption = Location in the state of [[Texas]]
