--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -58,7 +58,7 @@ Ing '''Kayarian ning Cambodia'''(para kareng aliwa pang lagyu king [[Khmer langu
 === Angkor and the Khmer Empire ===
 == Administratibung pangadake ==
 {{main|Ding Lalawigan ning Cambodia|District at Pangatabas ning Cambodia}}
-[[File:Cambodia-map-wiki.png|right|thumbnail|378px|Mapa ning Cambodia]]
+[[File:Cb-map.png|right|thumbnail|378px|Mapa ning Cambodia]]
 
 Ing Cambodia makadake ya kareng 20 [[lalawigan]] (''[[khet]]'', pangmetung at pangmarakalan) at 4 a [[balen]] (''[[krong]]'', pangmetung at pangmarakalan). Makadake la pa bilang [[distritu]] (''[[srok]]''), [[commune]] (''[[khum]]''), [[barangay]](''[[phum]]''), at [[pulu]] (''koh''). 
 {{columns
@@ -104,10 +104,6 @@ Ing Cambodia makadake ya kareng 20 [[lalawigan]] (''[[khet]]'', pangmetung at pa
 * Koh Traolach
 * Koh Treas
 }}
-
-
-
-[[File:300px-Cambodia_sm04.png|Mapa ning Cambodia]]
 
 == Pamagsiasat ==
 
