*Empty MediaWiki Message*

--- a/Brunei.mw
+++ b/Brunei.mw
@@ -55,7 +55,7 @@
 Ing '''Brunei''', opisyal a aus '''State ning Brunei''', '''Karinan ning Kapayapan''' at keng [[English]] naman, '''Abode of Peace''' ({{lang-ms|Negara Brunei Darussalam}}, [[Jawi (script)|Jawi]]:<big> برني دارالسلام </big>), metung yang bangsa atiu king [[pulu]] ning [[Borneo]],king [[Maulingaslagang Asia]]. Bukud keng kayang pampang keng [[Dayat Malat ning Mauling Tsina]], makapadurut yang states na ning [[Sarawak]] at [[Sabah]], [[East Malaysia]]. Ing Brunei, ing mitagan ning masikanan a [[sultanate]], binawi ne ing kayang katimawan ibat [[United Kingdom]] inyang [[Eneru 1]] [[1984]].
 
 [[File:150px-Bx-map.gif]]
-[[File:150px-Brunei.geohive.gif|Ding Distritu ning Brunei]]
+[[File:Brunei.geohive.gif|150px|thumb|Ding Distritu ning Brunei]]
 
 == Distritu at mukim ==
 [[File:Brunei districts english.png|thumb|150px|right|Distritu ning  Brunei.]]
