*Empty MediaWiki Message*

--- a/Fort_Stotsenburg.mw
+++ b/Fort_Stotsenburg.mw
@@ -1,4 +1,4 @@
-[[Image:220px-FortStotsenburg.jpg|thumb|220px|Ding pasbulasias ning Fort Stotsenburg, inyang mayayakit la inyang pilatan ning 1919-1941]] Ing '''Fort Stotsenburg''', inyang panaun ning[[Meto Yatung Labanan II]], iti ing karinan ning [[Philippine Department]]'s [[26th Cavalry Regiment]], [[86th Field Artillery Regiment]], at [[88th Field Artillery Regiment]]; kaantabe ning [[Philippine Division]]'s [[23rd Field Artillery Regiment|23rd]] at [[24th Field Artillery Regiment]]s. Iti ing karinan na rin ning [[12th Ordnance Company]] at ing platoon ning [[12th Quartermaster Regiment]]. 
+[[Image:FortStotsenburg.jpg|thumb|220px|Ding pasbulasias ning Fort Stotsenburg, inyang mayayakit la inyang pilatan ning 1919-1941]] Ing '''Fort Stotsenburg''', inyang panaun ning[[Meto Yatung Labanan II]], iti ing karinan ning [[Philippine Department]]'s [[26th Cavalry Regiment]], [[86th Field Artillery Regiment]], at [[88th Field Artillery Regiment]]; kaantabe ning [[Philippine Division]]'s [[23rd Field Artillery Regiment|23rd]] at [[24th Field Artillery Regiment]]s. Iti ing karinan na rin ning [[12th Ordnance Company]] at ing platoon ning [[12th Quartermaster Regiment]]. 
 
 Ing Fort Stotsenburg mga 80 [[kilometru|km]] pangulu ning [[Menila]], malapit [[Clark Field]]. Iti ing karinan nung nu, ing [[National Defense Act of 1935]], [[coastal artillery]] training a milyari. Milagyu kang Colonel [[John M. Stotsenburg]], metung a  Capitan ning Sixth [[U.S. Cavalry]], at metung a Colonel ning First Nebraska Volunteers a mesintang kabang manimunu ya keng keyang regiment king labanan malapit [[Quingua, Bulacan|Quingua]], [[Bulacan]], [[Filipinas]] inyang [[Abril 23]], [[1899]].
 
