*Empty MediaWiki Message*

--- a/Clark_Air_Base.mw
+++ b/Clark_Air_Base.mw
@@ -31,7 +31,7 @@
 {{Airport end frame}}[[Image:180px-Clarkab.gif|thumb|Clark Air Base, 1975.]]  Ing '''Clark Air Base''' dati yang basi ning [[U.S. Air Force]] king  pulu ning [[Luzon]] king  [[Filipinas]], ngeni kebaluan bilang ''Clark Special Economic Zone''. Atiu king pangulungalbugan ning [[Angeles Lakanbalen|Angeles Lakanbalen]] king lalawigan ning [[Pampanga]], at mga 40 milya (60 km) pangulungalbugan ning [[Menila]].  Iti ing dating karinan ning U.S. Army base [[Fort Stotsenburg]].
 
 Ing Clark Air Base metung urbanized military facility king amlat at pekamaragul dili king kilwal ning U.S. Ing basi meyalilan yang special economic zone kaibat dang meko [[Filipinas]] deng sundalus a Americanu inyang 1992.
-[[Image:220px-Clark2004.jpg]]
+[[Image:Clark2004.jpg]]
 
 ==Suglung Palwal==
 * [http://maps.google.com/maps?ll=15.188287,120.557957&spn=0.040054,0.058545&t=k&hl=en Satellite picture by Google Maps]
