--- a/Clark_Air_Base.mw
+++ b/Clark_Air_Base.mw
@@ -28,7 +28,7 @@
 }}
 
 [[Image:Clark_Air_Base_1986.jpg|thumb|Ing Clark Air Base, inyang 1986, keng gulut iyapin ing [[Bunduk Arayat]]]].
-{{Airport end frame}}[[Image:180px-Clarkab.gif|thumb|Clark Air Base, 1975.]]  Ing '''Clark Air Base''' dati yang basi ning [[U.S. Air Force]] king  pulu ning [[Luzon]] king  [[Filipinas]], ngeni kebaluan bilang ''Clark Special Economic Zone''. Atiu king pangulungalbugan ning [[Angeles Lakanbalen|Angeles Lakanbalen]] king lalawigan ning [[Pampanga]], at mga 40 milya (60 km) pangulungalbugan ning [[Menila]].  Iti ing dating karinan ning U.S. Army base [[Fort Stotsenburg]].
+{{Airport end frame}}[[Image:Clarkab.gif|220px|thumb|Clark Air Base, 1975.]]  Ing '''Clark Air Base''' dati yang basi ning [[U.S. Air Force]] king  pulu ning [[Luzon]] king  [[Filipinas]], ngeni kebaluan bilang ''Clark Special Economic Zone''. Atiu king pangulungalbugan ning [[Angeles Lakanbalen|Angeles Lakanbalen]] king lalawigan ning [[Pampanga]], at mga 40 milya (60 km) pangulungalbugan ning [[Menila]].  Iti ing dating karinan ning U.S. Army base [[Fort Stotsenburg]].
 
 Ing Clark Air Base metung urbanized military facility king amlat at pekamaragul dili king kilwal ning U.S. Ing basi meyalilan yang special economic zone kaibat dang meko [[Filipinas]] deng sundalus a Americanu inyang 1992.
 [[Image:Clark2004.jpg|220px|thumb]]
