*Empty MediaWiki Message*

--- a/Crow_Valley_Range_Complex.mw
+++ b/Crow_Valley_Range_Complex.mw
@@ -1,4 +1,4 @@
-[[Image:220px-Crow_Valley.jpg|An aerial view of the mock airfield at Crow Valley]]Ing '''Crow Valley Bombing and Gunnery Range''' ([[IATA_airport_code|IATA]]: '''RPXC''') iya ing peka [[bombing range]] ning [[United States Armed Forces]] king [[albugan Pacific]] at atiu king [[Camp O'Donnell]] king [[Tarlac]], [[Filipinas]].  Ing 42-milyang facilidad atiu mga 14 a milya manibat [[Clark Air Base]] at ginamit de para mismu keng pamisane keng [[aerial combat]], nung nu kayabe ing [[pamamomba]] at [[strafing]] a pamisane.
+[[Image:Crow_Valley.jpg|220px|thumb|An aerial view of the mock airfield at Crow Valley]]Ing '''Crow Valley Bombing and Gunnery Range''' ([[IATA_airport_code|IATA]]: '''RPXC''') iya ing peka [[bombing range]] ning [[United States Armed Forces]] king [[albugan Pacific]] at atiu king [[Camp O'Donnell]] king [[Tarlac]], [[Filipinas]].  Ing 42-milyang facilidad atiu mga 14 a milya manibat [[Clark Air Base]] at ginamit de para mismu keng pamisane keng [[aerial combat]], nung nu kayabe ing [[pamamomba]] at [[strafing]] a pamisane.
 
 Ing facilidad atin yang airfield at magatas a klasing [[electronic warfare]] installations, kayabe no reng makabayung  [[radar]] at [[radar jamming]] a gamit, agiang deng [[Russia]]n [[surface-to-air missile]] installation.
 
