*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -15,9 +15,9 @@
 |AUS|Australia              = [[Australia]]
 |AUT|Austria                = [[Austria]]
 |AZE|Azerbaijan             = [[Azerbaijan]]
+|BHS|BAH|Bahamas            = [[Bahamas]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BAH|Bahamas = [[Bahamas]]
 |BAN|Bangladesh = [[Bangladesh]]
 |BAR|Barbados = [[Barbados]]
 |BEL|Belgium = [[Belgium]]
