*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -15,9 +15,9 @@
 |AUS|Australia              = Flag of Australia.svg
 |AUT|Austria                = Flag of Austria.svg
 |AZE|Azerbaijan             = Flag of Azerbaijan.svg
+|BHS|BAH|Bahamas            = Flag of the Bahamas.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BAH|Bahamas = Flag of the Bahamas.svg
 |BAN|Bangladesh = Flag of Bangladesh.svg
 |BAR|Barbados = Flag of Barbados.svg
 |BEL|Belgium = Flag of Belgium.svg
