*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -15,10 +15,10 @@
 |AUS|Australia              = [[Australia]]
 |AUT|Austria                = [[Austria]]
 |AZE|Azerbaijan             = [[Azerbaijan]]
+|BGD|BAN|Banglades|Bangladesh = [[Banglades]]
 |BHS|BAH|Bahamas            = [[Bahamas]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BAN|Bangladesh = [[Bangladesh]]
 |BAR|Barbados = [[Barbados]]
 |BEL|Belgium = [[Belgium]]
 |BEN|Benin = [[Benin]]
