*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -15,10 +15,10 @@
 |AUS|Australia              = Flag of Australia.svg
 |AUT|Austria                = Flag of Austria.svg
 |AZE|Azerbaijan             = Flag of Azerbaijan.svg
+|BGD|BAN|Banglades|Bangladesh = Flag of Bangladesh.svg
 |BHS|BAH|Bahamas            = Flag of the Bahamas.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BAN|Bangladesh = Flag of Bangladesh.svg
 |BAR|Barbados = Flag of Barbados.svg
 |BEL|Belgium = Flag of Belgium.svg
 |BEN|Benin = Flag of Benin.svg
