*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -17,9 +17,9 @@
 |AZE|Azerbaijan             = [[Azerbaijan]]
 |BGD|BAN|Banglades|Bangladesh = [[Banglades]]
 |BHS|BAH|Bahamas            = [[Bahamas]]
+|BRB|BAR|Barbados           = [[Barbados]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BAR|Barbados = [[Barbados]]
 |BEL|Belgium = [[Belgium]]
 |BEN|Benin = [[Benin]]
 |BER|Bermuda = [[Bermuda]]
