*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -17,9 +17,9 @@
 |AZE|Azerbaijan             = Flag of Azerbaijan.svg
 |BGD|BAN|Banglades|Bangladesh = Flag of Bangladesh.svg
 |BHS|BAH|Bahamas            = Flag of the Bahamas.svg
+|BRB|BAR|Barbados           = Flag of Barbados.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BAR|Barbados = Flag of Barbados.svg
 |BEL|Belgium = Flag of Belgium.svg
 |BEN|Benin = Flag of Benin.svg
 |BER|Bermuda = Flag of Bermuda.svg
