--- a/Sulundagis.mw
+++ b/Sulundagis.mw
@@ -1,5 +1,19 @@
 [[File:Venus-pacific-levelled.jpg|thumb|Ing Salundagis a yati yu king babo ning banwa ning Karayatmalatang Pasipiku. Iya pin ing pirming makimayigit a masulu kareng aliwang planeta o batuin king kabanwanan ning yatu. Ing ''Jupiter'' ya ing kadwang pekamasulu.]]
-Ing '''Sulundagis''' o '''Sulundaguis'''<ref>[http://www.hau.edu.ph/kapampangan_center/publication/pdf/singsing/bergano.pdf] Only Kapampangans have a word for the planet Venus, the morning and evening star: sulundaguis (literally, rat’s lamp), which Bergaño defines as "that bright star that is seen occasionally in the west." (p. 21)</ref> (lit. ''rat's lamp'' king Ingles), kebaluan ya murin anti mung '''Venus''', iya pin ing kadwang planeta ning sistemang solar.
+Ing '''Sulundagis''' o '''Sulundaguis'''<ref>[http://www.hau.edu.ph/kapampangan_center/publication/pdf/singsing/bergano.pdf] Only Kapampangans have a word for the planet Venus, the morning and evening star: sulundaguis (literally, rat’s lamp), which Bergaño defines as "that bright star that is seen occasionally in the west." (p. 21)</ref> (lit. ''rat's lamp'' king Ingles), kebaluan ya murin anti mung '''Venus''', iya pin ing kadwang [[planeta]] ning sistemang solar, manibat king [[Aldo]]. Gawa ya king [[batu]], at atin yang makapal a [[:en:atmosphere|atmospera]]ng [[carbon dioxide]] a makapadurut kaniti. Uli ning ''[[:en:greenhouse effect|greenhouse effect]]'', ini ing mapaling diling planeta king [[Solar System]]. Atin yang mangakapal a [[biga]], anya e ta ya akakit ing kayang balat nung e tamu gumamit radar. 
+
+Ibat ya kang Venus, ing [[dios]]a ning [[sinta]] at legwan da reng [[:en:Roman|Romanu]], ing lagyu ning planeta. 
+
+Ing Venus ing masalang diling bage king banwa kaybat ning Aldo ampo ning Bulan. Neng kai, awsan deng ''Morning Star'' (tala ning abak) o ''Evening Star'' (tala ning sisilim).
+
+==Dalerayan==
+{{reflist}}
+
+== Kasusug Kiluwal ==
+* [http://www.nineplanets.org/venus.html Nine Planets: Venus ]
+* [http://csep10.phys.utk.edu/astr161/lect/venus/venus.html The Planet Venus ]
+* [http://www.mentallandscape.com/V_DigitalImages.htm Images of Venus]
+
+{{Footer_SolarSystem}}
 
 {{Suli}}
 
