--- a/Venus.mw
+++ b/Venus.mw
@@ -1,20 +1,1 @@
-[[File:Venus globe.jpg|thumb|250px|[[NASA]] image of Venus]]
-Ing '''Venus''' ing kadwang [[planeta]] manibat king [[Aldo]]. Gawa ya king [[batu]], at atin yang makapal a [[:en:atmosphere|atmospera]]ng [[carbon dioxide]] a makapadurut kaniti. Uli ning [[:en:greenhouse effect| greenhouse effect]], ini ing mapaling diling planeta king [[Solar System]]. Atin yang mangakapal a [[biga]], anya e ta ya akakit ing kayang balat nung e tamu gumamit radar. 
-
-Ibat ya kang Venus, ing [[dios]]a ning [[sinta]] at legwan da reng [[:en:Roman|Romanu]], ing lagyu ning planeta. 
-
-Ing Venus ing masalang diling bage king banwa kaybat ning Aldo ampo ning Bulan. Neng kai, awsan deng "Morning Star" (tala ning abak) o "Evening Star" (tala ning sisilim)..
-
-
-
-== External links ==
-* [http://www.nineplanets.org/venus.html Nine Planets: Venus ]
-* [http://csep10.phys.utk.edu/astr161/lect/venus/venus.html The Planet Venus ]
-* [http://www.mentallandscape.com/V_DigitalImages.htm Images of Venus]
-
-{{Footer_SolarSystem}}
-
-[[Category:Astronomia]]
-[[Category:Venus]]
-[[Category:Solar System]]
-[[Category:Planets]]
+#REDIRECT [[Sulundagis]]
