--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -15,12 +15,12 @@
 |AUS|Australia              = [[Australia]]
 |AUT|Austria                = [[Austria]]
 |AZE|Azerbaijan             = [[Azerbaijan]]
+|BEL|Belgika|Belgium        = [[Belgika]]
 |BGD|BAN|Banglades|Bangladesh = [[Banglades]]
 |BHS|BAH|Bahamas            = [[Bahamas]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BEL|Belgium = [[Belgium]]
 |BEN|Benin = [[Benin]]
 |BER|Bermuda = [[Bermuda]]
 |BIH|Bosnia and Herzegovina = [[Bosnia and Herzegovina]]
