--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -15,12 +15,12 @@
 |AUS|Australia              = Flag of Australia.svg
 |AUT|Austria                = Flag of Austria.svg
 |AZE|Azerbaijan             = Flag of Azerbaijan.svg
+|BEL|Belgika|Belgium        = Flag of Belgium.svg
 |BGD|BAN|Banglades|Bangladesh = Flag of Bangladesh.svg
 |BHS|BAH|Bahamas            = Flag of the Bahamas.svg
 |BRB|BAR|Barbados           = Flag of Barbados.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BEL|Belgium = Flag of Belgium.svg
 |BEN|Benin = Flag of Benin.svg
 |BER|Bermuda = Flag of Bermuda.svg
 |BIH|Bosnia and Herzegovina = Flag of Bosnia and Herzegovina.svg
